Permitir retornos de missionários para disponibilidades
