# lib/db/src/schema/index.ts
@@ -1,3 +1,11 @@
-export * from "./profilePreferences";
-export * from "./posts";
-export * from "./contributionAvailabilities";
+export * from "./profilePreferences"
+;
+
+export * from "./posts"
+;
+
+export * from "./contributionAvailabilities"
+;
+
+export * from "./contributionAvailabilityFeedback"
+;
